Leetcode 73. Set Matrix Zero