@@ -77,7 +77,7 @@ public class SetMatrixZero {
         matrix.add(new ArrayList<>(Arrays.asList(1, 0, 0, 1)));
 
         int n = matrix.size();
-        int m = matrix.get(0).size();
+        int m = matrix.getFirst().size(); // can also use .get(0) here
 
         ArrayList<ArrayList<Integer>> result = setZeroes(matrix, n, m);
 
@@ -89,23 +89,73 @@ public class SetMatrixZero {
         }
     }
 
+//    static ArrayList<ArrayList<Integer>> setZeroes(ArrayList<ArrayList<Integer>> matrix, int n, int m) {
+//        int[] row = new int[n];
+//        int[] col = new int[m];
+//        for (int i = 0; i < n; i++) {
+//            for (int j = 0; j < m; j++) {
+//                if (matrix.get(i).get(j) == 0) {
+//                    row[i] = 1;
+//                    col[j] = 1;
+//                }
+//            }
+//        }
+//
+//        for (int i = 0; i < n; i++) {
+//            for (int j = 0; j < m; j++) {
+//                if (row[i] == 1 || col[j] == 1) {
+//                    matrix.get(i).set(j, 0);
+//                }
+//            }
+//        }
+//
+//        return matrix;
+//    }
+
+
     static ArrayList<ArrayList<Integer>> setZeroes(ArrayList<ArrayList<Integer>> matrix, int n, int m) {
-        int[] row = new int[n];
-        int[] col = new int[m];
+        // int[] row = new int[n]; --> matrix[..][0]
+        // int[] col = new int[m]; --> matrix[0][..]
+
+        int col0 = 1;
+        // step 1: Traverse the matrix and
+        // mark 1st row & col accordingly:
         for (int i = 0; i < n; i++) {
             for (int j = 0; j < m; j++) {
                 if (matrix.get(i).get(j) == 0) {
-                    row[i] = 1;
-                    col[j] = 1;
+                    // mark i-th row:
+                    matrix.get(i).set(0, 0);
+
+                    // mark j-th column:
+                    if (j != 0)
+                        matrix.get(0).set(j, 0);
+                    else
+                        col0 = 0;
                 }
             }
         }
 
-        for (int i = 0; i < n; i++) {
-            for (int j = 0; j < m; j++) {
-                if (row[i] == 1 || col[j] == 1) {
-                    matrix.get(i).set(j, 0);
+        // Step 2: Mark with 0 from (1,1) to (n-1, m-1):
+        for (int i = 1; i < n; i++) {
+            for (int j = 1; j < m; j++) {
+                if (matrix.get(i).get(j) != 0) {
+                    // check for col & row:
+                    if (matrix.get(i).get(0) == 0 || matrix.get(0).get(j) == 0) {
+                        matrix.get(i).set(j, 0);
+                    }
                 }
+            }
+        }
+
+        //step 3: Finally mark the 1st col & then 1st row:
+        if (matrix.get(0).get(0) == 0) {
+            for (int j = 0; j < m; j++) {
+                matrix.get(0).set(j, 0);
+            }
+        }
+        if (col0 == 0) {
+            for (int i = 0; i < n; i++) {
+                matrix.get(i).set(0, 0);
             }
         }
 
